--- a/index.html
+++ b/index.html
@@ -36,17 +36,16 @@
                </container>
             </div>
             <div class="col-9">
-                <h2 class= "text-center">Results:</h2>
                 <container>
                   <div id="CurrentWeather" class="card">
-                    <h2 id="CitySearch">Nashville <img src=http://openweathermap.org/img/w/10d.png></h2>
-                    <p id="Temp">Temp:</p>
-                    <p id="Wind">Wind:</p>
-                    <p id="Humidity">Humidity:</p>
-                    <p id="uv">UV Index:</p>
+                    <h2 id="CitySearch">Search for a City to see the Weather For Today!</h2>
+                    <p id="Temp"></p>
+                    <p id="Wind"></p>
+                    <p id="Humidity"></p>
+                    <p id="uv"></p>
                   </div>
                   <container> 
-                    <h2 class="">5-Day Forecast:</h2>
+                    <h2 id="fivedayh2" class="d-none">5-Day Forecast:</h2>
                     <container id="fiveday"  class="flex-wrap row justify-content-between">
                     
                     </container>
