Removed console logs, updated README

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="flex-column">
     <header class="col-12 bg-primary text-center">
         <h1 class="display-3">WhereWeather</h1>
-        <p>Search for a City to see the Weather Forecast!</p>
+        <p class ="text-dark">Weather Data Provided by: <a class ="text-dark" href="https://openweathermap.org/">Open Weather</a></p>
     </header>
         <div class="d-flex">
             <div class="col-3 mr-0">
